[project]
name = "youtube-thumbnail-maker"
version = "0.1.0"
description = "Project to make youtube thumbnails"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[openai]>=1.0.7",
    "langgraph>=1.0.3",
    "langgraph-cli[inmem]>=0.4.7",
    "langsmith>=0.4.43",
    "openai[aiohttp]>=2.8.1",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
